<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExampleActivity">

    <Button
        android:id="@+id/activityBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="154dp"
        android:layout_height="27dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="76dp"
        android:text="@string/activity_current"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/activityBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activtyLearnButton"
        android:layout_width="206dp"
        android:layout_height="68dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="103dp"
        android:text="@string/activity_learn"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/ActivityPlayButton"
        android:layout_width="203dp"
        android:layout_height="71dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="160dp"
        android:text="@string/activity_play"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activtyLearnButton" />
</androidx.constraintlayout.widget.ConstraintLayout>